--- a/02-gif-app2/src/index.css
+++ b/02-gif-app2/src/index.css
@@ -15,3 +15,21 @@
 .imgs-speakers {
   @apply w-60;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: bg-slate-200; /* dark */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #525252;
+  border-radius: 10px;
+  border: 2px solid bg-slate-200;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: bg-slate-200;
+}
